kubernetes/jwt-verifier/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jwt-verifier
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jwt-verifier
  template:
    metadata:
      labels:
        app: jwt-verifier
    spec:
      containers:
        - image: evolutio/jwt-verifier:latest
          imagePullPolicy: IfNotPresent
          name: jwt-verifier
          ports:
            - containerPort: 80
