kubernetes/jwt-verifier/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jwt-verifier
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
  selector:
    app: jwt-verifier
