kubernetes/jwt-verifier/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jwt-verifier
spec:
  rules:
    - host: jwt-verifier.127.0.0.1.nip.io
      http:
        paths:
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: jwt-verifier
                port:
                  name: http
